eliminated clunky separate 'lifecycle' section of api spec format.
added dump_schema xplatter command.
schema filed maintained in docs/ now gets updated using that command.
